1602171122 fixed z-index autocomplete list

--- a/css/scheda.css
+++ b/css/scheda.css
@@ -106,7 +106,7 @@ div#panelFoto label{font-size:12px; color:black; cursor: pointer;}
 div#panelFoto label:hover{text-shadow:0px 0px 8px #000;}
 div#img{cursor: pointer;}
 div#tip{ display: none; width:800px; margin:10px auto !important;  padding:10px; background-color: orange;  font-size: 130%;text-align: center;border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
-div#fine{border-top:1px solid #96867B; border-bottom:1px solid #96867B; background-color: #CFC4B1; margin:10px 0px; padding:10px; font-weight: bold;}
+div#fine{border-top:1px solid #96867B; border-bottom:1px solid #96867B; background-color: #CFC4B1; margin:10px 0px; padding:10px; font-weight: bold;text-align:center;}
 /************* pager *************************/
 .page_navigation{margin: 15px 0px 15px 10px;}
 .page_navigation a{	padding:5px; margin:0px 2px; color:black;border:1px inset rgb(255,191,150);text-decoration: none; font-weight: bold;}
@@ -117,8 +117,8 @@ div#fine{border-top:1px solid #96867B; border-bottom:1px solid #96867B; backgrou
 .ui-widget-content{border:none;padding:0px;}
 .ui-widget-content, .ui-corner-all {-moz-border-radius: 0px; -webkit-border-radius: 0px; border-radius: 0px;}
 .ui-widget-header {border:none; background: #ECECEC; color: #907F73; font-weight: bold;}
-.ui-autocomplete { max-height: 200px; overflow-y: auto; overflow-x: hidden; }
-* html .ui-autocomplete {height: 200px;}
+.ui-autocomplete { max-height: 200px; overflow-y: auto; overflow-x: hidden; z-index:4000 !important;}
+* html .ui-autocomplete {height: 200px;z-index:4000 !important;}
 /********** mappa piccola *****/
 div.olControlZoom a, a.baseButton {background: #F8F8F6 !important; background: rgba(248, 248, 246, 0.5) !important;	}
 div.olControlZoom a:hover, a.baseButton:hover {background: #A5A56B !important;}
